chore( catalina.sh ): se agrega la configuración de memoria para el catalina