@@ -234,6 +234,8 @@ fi
 # Uncomment the following line to make the umask available when using the
 # org.apache.catalina.security.SecurityListener
 #JAVA_OPTS="$JAVA_OPTS -Dorg.apache.catalina.security.SecurityListener.UMASK=`umask`"
+JAVA_OPTS="$JAVA_OPTS -DforceReal=true"
+JAVA_OPTS="$JAVA_OPTS -Xms1024m -Xmx1024m -XX:PermSize=1024m -XX:MaxPermSize=1024m"
 
 # ----- Execute The Requested Command -----------------------------------------
 
